--- a/src/hide-sidebar/index.css
+++ b/src/hide-sidebar/index.css
@@ -1,3 +1,10 @@
-.test {
-  display: flex;
+/* 主页问题列表 */
+.Topstory-mainColumn {
+  width: 100% !important;
+  margin: 0 !important;
+}
+
+/* 主页侧边栏 */
+.GlobalSideBar {
+  display: none;
 }
